<resources>
    <string name="app_name">BenChat</string>

    <string name="title_activity_login">Welcome to BenChat</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_up_button">Sign Up</string>
    <string name="log_in_button">Log In</string>
    <string name="repeat_password">Repeat password</string>
    <string name="send_message">Send</string>
    <string name="conversations">Conversations</string>
    <string name="sign_out">Sign Out</string>
    <string name="refresh_messages">Refresh messages</string>
    <string name="who_chat_with">Who do you want to chat with?</string>
    <string name="username_hint">Username</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="conversation_preferences">Chat</string>
    <string name="conversation_name_hint">Conversation name</string>
    <string name="what_conversation_called">What should the conversation be called?</string>
    <string name="select_conversation_participants">Select participants</string>
    <string name="requests">Requests</string>
    <string name="friends">Friends</string>
    <string name="confirm">Confirm</string>
    <string name="decline">Decline</string>
    <string name="cancel">Cancel</string>
    <string name="enter_a_username">Enter a username</string>
    <string name="username">Username</string>
    <string name="add_friend">Add a Friend</string>
    <string name="add">Add</string>
    <string name="type_a_message">Type a message...</string>
    <string name="create_conversation">Create Conversation</string>
    <string name="no_messages_add_a_friend_to_get_chatting">No conversations! Add a friend to get chatting.</string>
    <string name="no_friends_message">No friends! Add your first friend using the button below.</string>
    <string name="no_friend_requests_message">No friend requests! Send one using the button below.</string>
    <string name="no_messages">No messages!</string>
</resources>
